created part, post, wishlist_part and parts_scrapper in models. generated a parts controller

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
               </div>
               <nav>
 
-                <a href="/users/index">Home</a><a href="/parts">My Parts</a><a href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a><a href="/news_feeds">News Feed</a>
+                <a href="/users/show">Home</a><a href="/parts">My Parts</a><a href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a><a href="/news_feeds">News Feed</a>
                 <% else %>
                 <a href="/users/sign_up">Sign Up</a><a href="/users/sign_in">Login</a>
                 <% end %>
