--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -9,7 +9,7 @@
       <div id ="text-overlay">
         <h1><img src="/img/black_white.png" alt="Van Builder Logo"></h1>
         <h1 style="font-family:'Bebas Neue';font-weight:normal;">KEEP TRACK OF THE PARTS FOR YOUR VAN BUILD</h1>
-            <a href="/users/sing_up" class="button btn btn-primary btn-primary-outline btn-pill">Sign Up</a>
+            <a href="/users/sign_up" class="button btn btn-primary btn-primary-outline btn-pill">Sign Up</a>
             <a href="/users/sign_in" class="button btn btn-primary btn-primary-outline btn-pill">Log In</a>
       </div>
     </div>
