--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="/css/responsive.css">
         <link rel="stylesheet" href="/css/user_index.css">
+          <link rel="stylesheet" href="/css/nav_social.css">
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
@@ -27,7 +28,7 @@
               </div>
             </div>
 
-            <div id="navbar" class="light-fade">
+            <!-- <div id="navbar" class="light-fade">
               <div class="wrapper">
 
                 <div id="account">
@@ -41,7 +42,7 @@
                   <a class="selected" href="/users/index">Home</a><a href="/parts">My Parts</a><a href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a><a href="/news_feeds">News Feed</a>
                 </nav>
               </div>
-            </div>
+            </div> -->
           </header>
           <div id="social">
           <a href="https://www.instagram.com/van.builder/?hl=en" target="_blank"><img src="https://ya-webdesign.com/images/instagram-black-logo-png-6.png" alt="Instagram"></a><br>
@@ -62,7 +63,7 @@
                                </div>
                               <div class="panel-thumbnail van"><img src="http://tinyvanbigliving.com/wp-content/uploads/2017/03/logo_03.png" width=250 class="img-responsive"></div>
                               <div class="panel-body">
-                                <p class="lead"> <strong>Welcome, <%= current_user.name %></strong></p>
+                                <p class="lead"> <strong>Welcome, <%= current_user.email %></strong></p>
                                 <div class="van">
                                 <h1><img width=200 src= "<%=current_user.url%>"></h1>
                                 </div>
