--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
+<head>
+  <link rel="stylesheet" href="/css/user_login.css">
+</head>
+<hgroup>
+<h1><strong>Forgot your password?</strong></h1>
+</hgroup>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="group">
+
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+
+    <%= f.submit "Send me reset password instructions", :class => 'button buttonBlue' %>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
