--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -54,7 +54,7 @@
             <% form_for new_part_path(@part), :class => 'form center-block' do |f| %>
             <div class="form-group">
 
-
+              <div class="form-group form-control input-lg">
             <%= f.label :manufacturer, :class => 'form-control input-lg' %>
             <%= f.text_field :manufacturer %>
             <%= f.label :name %>
@@ -65,6 +65,7 @@
             <%= f.text_field :qty %>
             <%= f.submit %>
             <% end %>
+              </div>
               </div>
         </div>
         </div>
