--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -12,7 +12,7 @@
             <a href="/users/sign_up" class="button btn btn-primary btn-primary-outline btn-pill">Sign Up</a>
             <a href="/users/sign_in" class="button btn btn-primary btn-primary-outline btn-pill">Log In</a><br><br>
             <%= link_to "Sign in using Facebook", '/users/auth/facebook', :class => 'button btn btn-primary btn-primary-outline btn-pill' %>
-            <%= link_to "Sign in using Google", '/users/auth/google', :class => 'button btn btn-primary btn-primary-outline btn-pill' %>
+            <%= link_to "Sign in using Google", '/users/auth/google_oauth2', :class => 'button btn btn-primary btn-primary-outline btn-pill' %>
       </div>
     </div>
   </body>
