--- a/app/views/wishlist_parts/edit.html.erb
+++ b/app/views/wishlist_parts/edit.html.erb
@@ -1,2 +1,48 @@
-<h1>WishlistParts#edit</h1>
-<p>Find me in app/views/wishlist_parts/edit.html.erb</p>
+
+<html>
+<head>
+  <link rel="stylesheet" href="/css/edit_wishlist_part.css">
+</head>
+<header>
+  <div id="navbar" class="light-fade">
+    <div class="wrapper">
+
+      <div id="account">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="/img/user.png" width=30 alt="user"></a>
+        <ul class="dropdown-menu">
+            <li><a href="/logout">Logout</a></li>
+            <li><a href="/users/<%= current_user.id %>/delete">Delete Account</a></li>
+      </ul>
+      </div>
+      <nav>
+        <a href="/users/index">Home</a><a href="/parts">My Parts</a><a href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a>
+      </nav>
+    </div>
+  </div>
+</header>
+<body>
+  <div class="container">
+    <div id="contact"
+    <h1> <strong><u>Edit Part</u></strong> </h1>
+    <h3><strong>Manufacturer:</strong> <%= @wishlist_part.manufacturer %><br></h3>
+    <h3><strong>Name:</strong> <%= @wishlist_part.name %></h3>
+    <h3><strong>Description:</strong> <%= @wishlist_part.description %></h3>
+    <h3><strong>Quanity:</strong> <%= @wishlist_part.qty %></h3>
+      <img src="<%= @wishlist_part.url %>"></img>
+      <h3><strong>Price:</strong> $<%= amount(@wishlist_part.price) %> </h3>
+      <h3><strong>Total Price:</strong> $<%= amount((@wishlist_part.price * @wishlist_part.qty)) %> </h3><br>
+      <form action="/wishlist_parts/<%= @wishlist_part.id %>" method="POST">
+      <input id="hidden" type="hidden" name="_method" value="PATCH">
+      <input type="text" placeholder= "Manufacturer:" name="manufacturer" value="<%= @wishlist_part.manufacturer %>">
+      <input type="text" placeholder= "Name:"name="name" value="<%= @wishlist_part.name %>">
+      <input type="text" placeholder= "Price:" name="price" value="<%= amount(@wishlist_part.price) %>">
+      <input type="text" placeholder= "Quantity:" name="qty" value="<%= @wishlist_part.qty %>">
+      <input type="text" placeholder= "Description:" name="description" value="<%= @wishlist_part.description %>"><br><br>
+      <button type="update" value="Update" id="update">Update</button>
+    </form>
+    </div>
+  </div>
+</body>
+<footer>
+    &copy; 2019 Van Builder. All Rights Reserved.
+</footer>
