--- a/public/css/individual_wishlist_part.css
+++ b/public/css/individual_wishlist_part.css
@@ -1,119 +1,33 @@
 * { box-sizing:border-box; }
-body {
-font-family: Helvetica;
-background: #bbb;
--webkit-font-smoothing: antialiased;
-}
+
+
 hgroup {
 text-align:center;
 margin-top: 4em;
 }
-#rig {
-  max-width:60%;
-  margin:0 auto; /*center aligned*/
-  padding:0;
-  font-size:0; /* Remember to change it back to normal font size if have captions */
-  list-style:none;
-  background-color: white;
-}
-#rig li {
-  display: inline-block;
-  *display:inline;/*for IE6 - IE7*/
-  width:25%;
-  vertical-align:middle;
-  box-sizing:border-box;
-  margin:0;
-  padding:0;
-}
-/* The wrapper for each item */
-.rig-cell {
-  /* margin:12px;
-  box-shadow:0 0 6px rgba(0,0,0,0.3); */
-  width: 100%;
-  display:block;
-  position: relative;
-  overflow:hidden;
-}
-/* If have the image layer */
-.rig-img {
-  display:block;
-  width: 100%;
-  height: auto;
-  border:none;
-  transform:scale(1);
-  transition:all 1s;
-}
-#rig li:hover .rig-img {
-  transform:scale(1.05);
-}
-/* If have the overlay layer */
-.rig-overlay {
-  position: absolute;
-  display:block;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-  background: #3DC0F1 url(img/link.png) no-repeat center 20%;
-  background-size:50px 50px;
-  opacity:0;
-  filter:alpha(opacity=0);/*For IE6 - IE8*/
-  transition:all 0.6s;
-}
-#rig li:hover .rig-overlay {
-  opacity:0.8;
-}
-/* If have captions */
-.rig-text {
-  display:block;
-  margin: 0 auto;
-  box-sizing:border-box;
-  position:absolute;
-  left:0;
-  width:100%;
-  text-align:center;
-  text-transform:capitalize;
-  font-size:10px;
-  font-weight:bold;
-  font-family: 'Oswald', sans-serif;
-  font-weight:normal!important;
-  top:25%;
-  color:white;
-  opacity:0;
-  filter:alpha(opacity=0);/*For older IE*/
-  transform:translateY(-20px);
-  transition:all .3s;
-}
-#rig li:hover .rig-text {
-  transform:translateY(0px);
-  opacity:0.9;
-}
+
 h1, h3 { font-weight: 300; }
+
 h1 { color: #636363; }
+
 h3 { color: #4a89dc; }
 
-.partform {
-/* display: inline-block; */
-display: block;
-margin-left: auto;
-margin-right: auto;
-height: 65vh;
-width: 30%;
-margin-left: 171px;
-margin-top: 2vh;
-/* margin: auto; */
-float: left;
+form {
+width: 380px;
+
+margin: 5em auto;
 padding: 3em 2em 2em 2em;
 background: white;
 text-align: center;
 border: 1px solid #ebebeb;
 box-shadow: rgba(0,0,0,0.14902) 0px 1px 1px 0px,rgba(0,0,0,0.09804) 0px 1px 2px 0px;
 }
+
 .group {
 position: relative;
 margin-bottom: 45px;
 }
+
 input {
 font-size: 18px;
 padding: 10px 10px 10px 5px;
@@ -126,8 +40,12 @@ border: none;
 border-radius: 0;
 border-bottom: 1px solid #757575;
 }
+
 input:focus { outline: none; }
+
+
 /* Label */
+
 label {
 color: #999;
 font-size: 18px;
@@ -138,19 +56,26 @@ left: 5px;
 top: 10px;
 transition: all 0.2s ease;
 }
+
+
 /* active */
+
 input:focus ~ label, input.used ~ label {
 top: -20px;
 transform: scale(.75); left: -2px;
 /* font-size: 14px; */
 color: #4a89dc;
 }
+
+
 /* Underline */
+
 .bar {
 position: relative;
 display: block;
 width: 100%;
 }
+
 .bar:before, .bar:after {
 content: '';
 height: 2px;
@@ -160,11 +85,19 @@ position: absolute;
 background: #4a89dc;
 transition: all 0.2s ease;
 }
+
 .bar:before { left: 50%; }
+
 .bar:after { right: 50%; }
+
+
 /* active */
+
 input:focus ~ .bar:before, input:focus ~ .bar:after { width: 50%; }
+
+
 /* Highlight */
+
 .highlight {
 position: absolute;
 height: 60%;
@@ -174,16 +107,25 @@ left: 0;
 pointer-events: none;
 opacity: 0.5;
 }
+
+
 /* active */
+
 input:focus ~ .highlight {
 animation: inputHighlighter 0.3s ease;
 }
+
+
 /* Animations */
+
 @keyframes inputHighlighter {
 from { background: #4a89dc; }
 to 	{ width: 0; background: transparent; }
 }
+
+
 /* Button */
+
 .button {
 position: relative;
 display: inline-block;
@@ -204,13 +146,20 @@ cursor: pointer;
 transition: all 0.15s ease;
 }
 .button:focus { outline: 0; }
+
+
 /* Button modifiers */
+
 .buttonBlue {
 background: #4a89dc;
 text-shadow: 1px 1px 0 rgba(39, 110, 204, .5);
 }
+
 .buttonBlue:hover { background: #357bd8; }
+
+
 /* Ripples container */
+
 .ripples {
 position: absolute;
 top: 0;
@@ -220,7 +169,10 @@ height: 100%;
 overflow: hidden;
 background: transparent;
 }
+
+
 /* Ripples circle */
+
 .ripplesCircle {
 position: absolute;
 top: 50%;
@@ -232,49 +184,67 @@ height: 0;
 border-radius: 50%;
 background: rgba(255, 255, 255, 0.25);
 }
+
 .ripples.is-active .ripplesCircle {
 animation: ripples .4s ease-in;
 }
+
+
 /* Ripples animation */
+
 @keyframes ripples {
 0% { opacity: 0; }
+
 25% { opacity: 1; }
+
 100% {
   width: 200%;
   padding-bottom: 200%;
   opacity: 0;
 }
 }
+
 footer { text-align: center; }
+
 footer p {
 color: #888;
 font-size: 13px;
 letter-spacing: .4px;
 }
+
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 1000px #FAFAFA inset !important;
 }
+
 footer a {
 color: #4a89dc;
 text-decoration: none;
 transition: all .2s ease;
 }
+
 footer a:hover {
 color: #666;
 text-decoration: underline;
 }
+
 footer img {
 width: 300px;
 transition: all .2s ease;
 }
+
 footer img:hover { opacity: .83; }
+
 footer img:focus , footer a:focus { outline: none; }
+
 /*////////// BACKGROUNDS //////////*/
 .white-wood {
 background: url(https://previews.123rf.com/images/irrrina/irrrina1406/irrrina140600168/29418362-vintage-white-wooden-wall-background.jpg) no-repeat center top;
 background-size: cover;
 }
+
 .light-fade {
+
+
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#959595+0,0d0d0d+46,010101+50,0a0a0a+53,4e4e4e+76,383838+87,1b1b1b+100;Black+Gloss+Pipe */
 background: #efefef; /* Old browsers */
   background: -moz-linear-gradient(top,  #efefef 0%, #ffffff 24%, #ffffff 68%, #dddddd 100%); /* FF3.6+ */
@@ -285,6 +255,7 @@ background: #efefef; /* Old browsers */
   background: linear-gradient(to bottom,  #efefef 0%,#ffffff 24%,#ffffff 68%,#dddddd 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#efefef', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
 }
+
 .medium-fade {
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,cccccc+100;Gren+3D */
 background: #eeeeee; /* Old browsers */
@@ -293,19 +264,24 @@ background: -webkit-linear-gradient(top, #eeeeee 0%,#cccccc 100%); /* Chrome10-2
 background: linear-gradient(to bottom, #eeeeee 0%,#cccccc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
 }
+
 /*////////// NAVBAR //////////*/
+
 #navbar {
 position: fixed;
 top: 0;
 left: 0;
 width: 100%;
+height: 60px;
 z-index: 2;
 border-bottom: 1px solid #ccc;
 text-align: center;
 }
+
 #navbar nav {
 border-left: 1px solid #ccc;
 }
+
 #navbar nav a {
 display: inline-block;
 width: 16.6666667%;
@@ -319,10 +295,12 @@ text-decoration: none;
 font: 1em "Trebuchet MS", Arial, sans-serif;
 font-weight: bold;
 }
+
 #navbar nav a.selected {
 background: #333;
 color: white;
 }
+
 #navbar nav a:hover {
 color: white;
 background: rgb(0,0,0); /* Old browsers */
@@ -333,21 +311,27 @@ background: -o-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(
 background: -ms-linear-gradient(top,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(71,71,71,1) 28%,rgba(81,81,81,1) 35%,rgba(71,71,71,1) 72%,rgba(43,43,43,1) 87%,rgba(28,28,28,1) 91%,rgba(0,0,0,1) 100%); /* W3C */
 }
+
 #navbar nav a.menu-icon {
 display: none;
 }
+
 #account {
 z-index: -1;
 float: right;
 margin: 10px;
 padding-right: 5px;
 }
+
 .shadow {
 box-shadow: 0 3px 10px #333;
 }
+
 body {
-padding-top: 70px;
+background: #bbb;
+ padding-top: 70px;
 }
+
 h3 {
 position: relative;
 color: #fff;
@@ -357,7 +341,7 @@ clear: both;
 font: 1.8em "Trebuchet MS", Arial, sans-serif;
 padding: 10px 305px 10px;
 border: solid #000 1px;
-background: #333;
+background: #111;
 }
 h4 {
 font-size: 12px;
@@ -373,19 +357,11 @@ text-decoration: none;
 font: 2.6em "Trebuchet MS", Arial, sans-serif;
 padding: 10px;
 border: solid #000 1px;
-background: #333;
+background: #111;
 margin: 50px 170px 50px;
 }
-.parts {
-margin-bottom: 2vh;
-}
-.total {
-float: right;
-position: relative;
-left: -12.9%;
-padding-bottom: 50px;
-}
-/* ////////// FOOTER //////////*/
+/*////////// FOOTER //////////*/
+
 footer {
 position: fixed;
 bottom: 0;
@@ -394,8 +370,4 @@ font-size: 0.75em;
 padding: 10px;
 /* background: #eee; */
 border-top: 1px solid #ccc;
-}
-
-#add-button {
-  float: right;
 }
