--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -51,16 +51,25 @@
   			Add Post
         </div>
         <div class="modal-body">
-            <form action="/posts/new" method=POST class="form center-block" autocomplete="on">
+            <!-- <form action="/posts/new" method=POST class="form center-block" autocomplete="on">
               <div class="form-group">
                 <textarea class="form-control input-lg" name = "title" autofocus="" placeholder="Title" required></textarea>
                 <textarea class="form-control input-lg" name = "embed" autofocus="" placeholder="Video Embed"></textarea>
                 <textarea class="form-control input-lg" name = "description" rows="8" cols="80" autofocus="" placeholder="Description" required></textarea>
               </div>
               <input class="btn btn-primary btn-sm" type="submit" value="Submit" id="submit">
-            </form>
+            </form> -->
 
-          
+            <%= form_for Post.new, :class => 'form center-block' do |f| %>
+            <div class="form-group">
+            <%= f.text_field :title, placeholder: "Title", :class => 'form-control input-lg ' %><br>
+            <%= f.text_area :embed, placeholder: "Embed Video", :class => 'form-control input-lg' %><br>
+            <%= f.text_area :description, placeholder: "Description", :class => 'form-control input-lg' %><br>
+            </div>
+
+            <%= f.submit "Submit", :class => 'btn btn-primary btn-sm', :id => 'submit' %>
+
+            <% end %>
 
         </div>
         </div>
