atempting to have multiple postmodals on one news feed page

--- a/app/views/parts/edit.html.erb
+++ b/app/views/parts/edit.html.erb
@@ -13,9 +13,7 @@
           <li><a href="/users/<%= current_user.id %>/delete">Delete Account</a></li>
     </ul>
     </div>
-    <nav>
-      <a href="/users/index">Home</a><a href="/parts">My Parts</a><a href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a><a href="/news_feeds">News Feed</a>
-    </nav>
+  <%= render 'layouts/nav' %>
   </div>
 </div>
 <body>
