--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,12 +9,11 @@
                 <% if user_signed_in? %>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="/img/user.png" width=30 alt="user"></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/users/sign_out">Logout</a></li>
+                    <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
                     <li><a href="/users/<%= current_user.id %>/delete">Delete Account</a></li>
               </ul>
               </div>
               <nav>
-
                 <a href="/users/show">Home</a><a href="/parts">My Parts</a><a href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a><a href="/news_feeds">News Feed</a>
                 <% else %>
                 <a href="/users/sign_up">Sign Up</a><a href="/users/sign_in">Login</a>
