--- a/app/views/news_feeds/index.html.erb
+++ b/app/views/news_feeds/index.html.erb
@@ -16,37 +16,50 @@
     </ul>
     </div>
     <%= render "layouts/nav" %>
+
   </div>
 </div>
 <body>
-    <h1><strong>My Blog</strong><a href="#postModal" id ="add-button" role="button" data-toggle="modal"><span class="badge">Add Post</span></a></h1>
+    <h1><strong>News Feed</strong></h1>
     <div class="posts">
 
-<% current_user.posts.each do |post| %>
+<% Post.all.each do |post| %>
+
 
 <form class="post shadow">
   <div id="contact">
-    <h2><strong><%= post.title %></strong> </h2><br><br>
+
+    <%@p = post %>
+
+    <h2><strong><%= post.title %></strong> </h2>
+    <%  @user = User.find(post.user_id) %>
+    <h2>Posted by: <%= @user.email %> </h2><br><br>
     <%= post.embed.html_safe %><br><br>
     <div class="description">
     <h4><%= post.description %></h4>
+    <a data-target="#postModal<%=post.id%>" role="button" data-toggle="modal"><span class="badge">Add Comment</span></a>
+    <h2><strong>Comments:</strong></h2>
+    <% post.comments.each do |comment| %>
+    <strong><%= comment.user.email %></strong> said <%= comment.content %><br><br>
+<% end %>
+
+
+
     </div>
     <br>
-    <a href="/posts/<%= post.id %>/edit">Edit</a>
-    &nbsp; | &nbsp;
-    <a href="/posts/<%= post.id %>/delete">Delete</a>
   </div>
 </form>
-<% end %>
+
+
   </div>
 
 
-  <div id="postModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div id="postModal<%=post.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-  			Add Post
+  			Add Comment
         </div>
         <div class="modal-body">
             <!-- <form action="/posts/new" method=POST class="form center-block" autocomplete="on">
@@ -58,21 +71,24 @@
               <input class="btn btn-primary btn-sm" type="submit" value="Submit" id="submit">
             </form> -->
 
-            <%= form_for Post.new, :class => 'form center-block' do |f| %>
+            <%= form_for Comment.new, :class => 'form center-block' do |f| %>
             <div class="form-group">
-            <%= f.text_field :title, placeholder: "Title", :class => 'form-control input-lg ' %><br>
-            <%= f.text_area :embed, placeholder: "Embed Video", :class => 'form-control input-lg' %><br>
-            <%= f.text_area :description, placeholder: "Description", :class => 'form-control input-lg' %><br>
+            <%= f.hidden_field :post_id, :value => post.id %>
+
+            <%= f.text_area :content, placeholder: "Content", :class => 'form-control input-lg ' %><br>
+
             </div>
 
             <%= f.submit "Submit", :class => 'btn btn-primary btn-sm', :id => 'submit' %>
 
+            <% end %>
             <% end %>
 
         </div>
         </div>
     </div>
     </div>
+
 
 </body>
 
