--- a/app/views/wishlist_parts/index.html.erb
+++ b/app/views/wishlist_parts/index.html.erb
@@ -15,9 +15,7 @@
           <li><a href="/users/<%= current_user.id %>/delete">Delete Account</a></li>
     </ul>
     </div>
-    <nav>
-      <a  href="/users/index">Home</a><a href="/parts">My Parts</a><a class="selected" href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a>
-    </nav>
+  <%= render "layouts/nav" %>
   </div>
 </div>
 <body>
