--- a/app/views/wishlist_parts/show.html.erb
+++ b/app/views/wishlist_parts/show.html.erb
@@ -11,9 +11,7 @@
           <li><a href="/users/<%= current_user.id %>/delete">Delete Account</a></li>
     </ul>
     </div>
-    <nav>
-      <a href="/users/index">Home</a><a href="/parts">My Parts</a><a href="/wishlist_parts">My Wishlist</a><a href="/posts">My Blog</a>
-    </nav>
+    <%= render "layouts/nav" %>
   </div>
 </div>
 <body>
