added validations to parts posts and wishlist parts and made them required on each form

--- a/app/views/news_feeds/index.html.erb
+++ b/app/views/news_feeds/index.html.erb
@@ -76,7 +76,7 @@
             <div class="form-group">
             <%= f.hidden_field :post_id, :value => @p.id %>
 
-            <%= f.text_area :content, placeholder: "Content", :class => 'form-control input-lg ' %><br>
+            <%= f.text_area :content, placeholder: "Content", :required => true, :class => 'form-control input-lg ' %><br>
 
             </div>
 
