--- a/app/views/news_feeds/index.html.erb
+++ b/app/views/news_feeds/index.html.erb
@@ -41,7 +41,6 @@
     <h2><strong>Comments:</strong></h2>
     <% post.comments.each do |comment| %>
     <strong><%= comment.user.email %></strong> said <%= comment.content %><br><br>
-<% end %>
   <% end %>
 
 
@@ -82,6 +81,7 @@
 
             <%= f.submit "Submit", :class => 'btn btn-primary btn-sm', :id => 'submit' %>
 
+            <% end %>
 
             <% end %>
 
@@ -89,6 +89,8 @@
         </div>
     </div>
     </div>
+  </div>
+
 
 
 </body>
